[package]
name = "rskey"
version = "0.3.0"
authors = ["John Arundel <john@bitfieldconsulting.com>"]
edition = "2021"
description = """
A simple persistent key-value store that wraps HashMap, with a basic CLI tool to list, get, and set key-value pairs.
"""
keywords = ["key-value-store", "database", "cli", "kv"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/rskey"
homepage = "https://github.com/bitfield/rskey"
repository = "https://github.com/bitfield/rskey"
exclude = ["/.github/"]

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
tempfile = "3.10.1"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
